fix #45 where validateRequest was mistakenly called in validateResponseByOperationId (#50)

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "test": "jest --coverage --no-watchman",
-    "test:watch": "jest --coverage --watch",
+    "test:watch": "jest --watch",
+    "test:watch:debug": "node --inspect node_modules/.bin/jest --runInBand --watch",
     "prepublishOnly": "rm -rf lib && tsc",
     "release": "yarn prepublishOnly && changeset publish"
   },
