--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
     "xregexp": "^4.2.4"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.4.1",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.12.24",
-    "@types/xregexp": "^3.0.30",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^24.9.0",
-    "jest": "^24.9.0",
-    "prettier": "^2.2.1",
-    "ts-jest": "^24.1.0",
-    "typescript": "^3.6.3"
+    "@changesets/cli": "2.4.1",
+    "@types/jest": "24.0.25",
+    "@types/node": "12.12.24",
+    "@types/xregexp": "3.0.30",
+    "babel-core": "6.26.3",
+    "babel-jest": "24.9.0",
+    "jest": "24.9.0",
+    "prettier": "2.2.1",
+    "ts-jest": "24.3.0",
+    "typescript": "3.7.4"
   }
 }
